Fixed nav-bar (getting hidden under signup). Added loading message on Login.

--- a/Front-End/client/src/components/Navbar/Navbar.css
+++ b/Front-End/client/src/components/Navbar/Navbar.css
@@ -39,6 +39,7 @@
   display: flex;
   align-items: center;
   height: 80px;
+  z-index:1;
 }
 
 .navbar_links {
